--- a/template.html
+++ b/template.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Types</title>
+    <link rel="stylesheet" href="viewer.css">
 </head>
 <body>
 <div id="root"></div>
