--- a/index.html
+++ b/index.html
@@ -3,13 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Types</title>
-    <link rel="stylesheet" href="viewer.css">
 </head>
 <body>
 <div id="root"></div>
-<script>
-  var DATA = {{data}};
-</script>
-<script src="viewer.js"></script>
+<script src="viewer/index.js"></script>
 </body>
 </html>
