move build to root

--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Types</title>
-</head>
-<body>
-<div id="root"></div>
-<script src="viewer/index.js"></script>
-</body>
-</html>
+<!DOCTYPE html> <html lang="en"> <head> <meta charset="UTF-8"> <title>Types</title> <link rel="stylesheet" href="ab31d8ba347debe49026547c163402ef.css"></head> <body> <div id="root"></div> <script src="ab31d8ba347debe49026547c163402ef.js"></script> </body> </html> 
