--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<!DOCTYPE html> <html lang="en"> <head> <meta charset="UTF-8"> <title>Types</title> <link rel="stylesheet" href="ab31d8ba347debe49026547c163402ef.css"></head> <body> <div id="root"></div> <script src="ab31d8ba347debe49026547c163402ef.js"></script> </body> </html> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Types</title>
+    <link rel="stylesheet" href="ab31d8ba347debe49026547c163402ef.css">
+</head>
+<body>
+<a href="https://github.com/gloooom/flow-types-viewer"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+<div id="root"></div>
+<script src="ab31d8ba347debe49026547c163402ef.js"></script>
+</body>
+</html>
